@@ -1,10 +1,21 @@
+2013-06-09  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
+
+	* plugin/soccer/gamestateaspect/gamestateaspect.h:
+	* plugin/soccer/gamestateaspect/gamestateaspect.cpp:
+	* plugin/soccer/agentstate/agentstate.cpp (AgentState::OnUnlink): 
+	* rcssserver3d/naosoccersim.rb: 
+	- control the number of heterogeneous players each team can use. It limits
+	  both the total number of heterogeneous players of each team
+	  (MaxTotalHeteroCount variable in naosoccersim.rb), and the number of 
+	  heterogeneous players of each type (MaxHeteroTypeCount variable)
+ 
 2013-06-06  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
 
 	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.h: 
 	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.cpp: 
 	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor_c.cpp: 
 	* data/rsg/agent/nao/naoneckhead.rsg: 
-	- Add MyOrientation sensing by Patrick (setSenseMyOrien in rsg file)
+	- added MyOrientation sensing by Patrick (setSenseMyOrien in rsg file)
 	
 2013-04-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
 
